[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/power_up_inspector_plugin/property_list_control.gd" type="Script" id=1]

[node name="PropertyListControl" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1543.0
margin_bottom = -934.0
script = ExtResource( 1 )

[node name="Button" type="MenuButton" parent="."]
margin_right = 377.0
margin_bottom = 20.0
toggle_mode = false
action_mode = 1
text = "Add Player Property"

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 24.0
margin_right = 377.0
margin_bottom = 28.0

[node name="RealEntry" type="HBoxContainer" parent="."]
margin_top = 32.0
margin_right = 377.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="RealEntry"]
margin_top = 5.0
margin_right = 232.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Real"
clip_text = true

[node name="SpinBox" type="SpinBox" parent="RealEntry"]
margin_left = 236.0
margin_right = 353.0
margin_bottom = 24.0
size_flags_horizontal = 11
step = 0.1
value = 1.0

[node name="RemoveButton" type="ToolButton" parent="RealEntry"]
margin_left = 357.0
margin_right = 377.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "X"

[node name="BoolEntry" type="HBoxContainer" parent="."]
margin_top = 60.0
margin_right = 377.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="BoolEntry"]
margin_top = 5.0
margin_right = 232.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Bool"
clip_text = true

[node name="CheckBox" type="CheckBox" parent="BoolEntry"]
margin_left = 236.0
margin_right = 353.0
margin_bottom = 24.0
size_flags_horizontal = 11

[node name="RemoveButton" type="ToolButton" parent="BoolEntry"]
margin_left = 357.0
margin_right = 377.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "X"
